--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepages": "http://ryanaripley.github.io/pub-trivia",
+  "homepages": "http://ryanaripley.com/pub-trivia",
   "name": "pub-trivia",
   "version": "0.1.0",
   "private": true,
