Update package.json to url beerhalltrivia.com

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://ryanaripley.com/pub-trivia",
+  "homepage": "http://beerhalltrivia.com",
   "name": "pub-trivia",
   "version": "0.1.0",
   "private": true,
